--- a/index.html
+++ b/index.html
@@ -7,43 +7,48 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="nav">
+    <nav>
         <img src="assets/images/logo.png">
+        <img alt="Four Balloons Site Logo"
         <ul>
             <li>
                 <a href="index.html">Home Page</a>
             </li>
             <li>
-                <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Link 2</a>
+                <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Intro To Web Accessibility</a>
             </li>
             <li>
-                <a href="https://www.w3.org/TR/WCAG21/">Link 3</a>
+                <a href="https://www.w3.org/TR/WCAG21/">WCAG 2.1 Success Criteria</a>
             </li>
         </ul>
-    </div>
-    <div class="main">
-        <h1 class="flashy-text">WebFiesta: The Online Party Supply Superstore!!</h1>
-        <h1 class="flashy-text">About Us</h1>
+    </nav>
+    <main>
+        <h2 class="title">WebFiesta: The Online Party Supply Superstore!!</h2>
+        <h2 class="about Us">About Us</h2>
         <img src="assets/images/balloons.jpg" class="banner"> 
         <a href="https://pxhere.com/en/photo/1267651">Image source</a>
+        <img alt="Colorful Balloons Banner"
         <h3>Come here for all your party supply needs!</h3>
         <p>Kid's birthday? Grandpa's birthday? Anniversary? Fourth Wedding? You name the celebration, we have what you need!</p>
         <hr>
-        <h1 class="flashy-text">Contact Us</h1>
-        <h6>We my take 3-6 business days to respond</h6>
-        <h5>Click the green button to submit or the red button to clear the form</h5>
+        <h2 class="contact us">Contact Us</h2>
+        <h3>We my take 3-6 business days to respond</h32>
+        <h4>Click the green button to submit or the red button to clear the form</h4>
         <form>
             <h2>Contact Form</h2>
             <div>
                 Your First Name:
+                <label for="firstname">Your First Name:</label>
                 <input type="text" name="firstname" id="firstname">
             </div>
             <div>
                 Your Last Name:
                 <input type="text" name="lastname" id="lastname">
+                <input type="text" name="lastname" id="lastname">
             </div>
             <div>
                 Concern or Issue:
+                <label for="concern">Concern or Issue:</label>
                 <select name="concern" id="concern">
                     <option value="1">missing product</option>
                     <option value="2">billing issue</option>
@@ -54,26 +59,30 @@
             <div>
                 Other Notes:
                 <textarea></textarea>
-            </div>
-            <input type="submit" class="btn1">
-            <input type="submit" class="btn2">
+            </main>
+            <input type="submit" value="Clear form">
+            <input type="submit" value="Submit form">
         </form>
         <hr>
-        <h1 class="flashy-text">Directions</h1>
-        <div class="section">
+        <h2 class="Directions">Directions</h2>
+        <section>
             <div>
                 <img src="assets/images/car.png"> 20 mins 
+                <img alt="car"
             </div>
             <div>
                 <img src="assets/images/bicycle.png"> 35 mins
+                <img alt="bicycle"
             </div>
             <div>
                 <img src="assets/images/ferry.png"> 50 mins
+                <img alt="ferry"
             </div>
             <div>
                 <img src="assets/images/bus.png"> 55 mins
+                <img alt="bus"
             </div>
-        </div>
+        </section>
         <div>
             It's easy peasy to get here to our physical warehouse, just check the transportation mode you'll be using
         </div>
@@ -82,12 +91,13 @@
             <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
         </div>
     </div>
-    <div class="footer">
+    <footer>
         Thanks for stopping by ❤️ 
         <div>
             <img src="assets/images/logo.png">
             <a href="https://creazilla.com/nodes/64384-colourful-balloons-clipart">Cute logo provided by ElisaRiva via Pixabay</a>
+            <img alt="Four Balloons Site Logo"
         </div>
-    </div>
+    </footer>
 </body>
 </html>
